client/src/app/race/hud/rpm-bar/rpm-bar.component.css
#greenBar{
    border-left: solid chartreuse 1vmin;
    height: 4vmin;

    margin-right:0.5vmin;
}

#yellowBar{
    border-left: solid gold 1vmin;
    height: 4vmin;

    margin-right:0.5vmin;
}

#redBar{
    border-left: solid red 1vmin;
    height: 4vmin;
    margin-right:0.5vmin;

}
#boxBody{
    background-color: rgba(128, 128, 128, 0.5);
    border: solid black;
    margin-left:1%;
    margin-right: 5%;

}
#speed{
    font-size: 200%;
    text-shadow: 0px 0px 1vmin rgb(255, 0, 0);
    color: black;
    width: 20vmin;

}
#numberSpeed{
    font-size: 150%;
}
#kmh{
    font-size: 100%;
    text-align: end ;
    vertical-align: bottom;
}
#gear{
    font-size: 800%;
    text-shadow: 0px 0px 1vmin whitesmoke;
    color: black;
    text-align: left;
    width: 20vmin;
}

